--- a/manifest.json
+++ b/manifest.json
@@ -14,17 +14,13 @@
   "page_action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "icons/subsession-active16.png",
+      "32": "icons/subsession-active32.png",
+      "48": "icons/subsession-active48.png",
+      "96": "icons/subsession-active96.png",
+      "128": "icons/subsession-active128.png"
     }
   },
-  "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
-  },
+
   "manifest_version": 2
 }
