--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,23 @@
   "browser_action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/subsession-active16.png",
-      "32": "icons/subsession-active32.png",
-      "48": "icons/subsession-active48.png",
-      "96": "icons/subsession-active96.png",
-      "128": "icons/subsession-active128.png"
+      "16": "icons/v2/subsession16.png",
+      "24": "icons/v2/subsession24.png",
+      "32": "icons/v2/subsession32.png",
+      "64": "icons/v2/subsession64.png",
+      "128": "icons/v2/subsession128.png",
+      "256": "icons/v2/subsession256.png",
+      "512": "icons/v2/subsession512.png"
     }
+  },
+  "icons": {
+    "16": "icons/v2/subsession16.png",
+    "24": "icons/v2/subsession24.png",
+    "32": "icons/v2/subsession32.png",
+    "64": "icons/v2/subsession64.png",
+    "128": "icons/v2/subsession128.png",
+    "256": "icons/v2/subsession256.png",
+    "512": "icons/v2/subsession512.png"
   },
 
   "manifest_version": 2
