--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -13,7 +13,7 @@
     "persistent": true
   },
   "browser_action": {
-    "default_popup": "popup/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/v2/subsession16.png",
       "24": "icons/v2/subsession24.png",
