--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/elecgnosis/subsession#readme",
   "devDependencies": {
-    "html-pages-brunch": "^2.7.0"
+    "html-pages-brunch": "^2.7.0",
+    "uglify-js-brunch": "^2.10.0"
   }
 }
